codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui_app_server__bottom_pane__chat_composer__tests__plugin_mention_popup.snap
---
source: tui_app_server/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› $sa                                                                                               "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  Sample Plugin  [插件] 包含 Figma MCP 服务和常用工作流技能的插件                                   " Hidden by multi-width symbols: [(19, " "), (21, " "), (25, " "), (27, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " "), (56, " "), (58, " "), (60, " "), (62, " "), (64, " ")]
"                                                                                                    "
"  按 enter 插入，按 esc 关闭                                                                        " Hidden by multi-width symbols: [(3, " "), (12, " "), (14, " "), (16, " "), (18, " "), (25, " "), (27, " ")]
